# GraphRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  main.py
src/core/: graphrag_connection.py
src/core/db/: connections.py  redis_connection.py
tests/: test_config.py  test_main.py
